--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,9 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+::selection {
+  background: gray;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
