--- a/src/components/Project/Project.css
+++ b/src/components/Project/Project.css
@@ -4,9 +4,12 @@
   object-fit: cover;
   border: 1px solid #989898;
   border-radius: 5%;
+  box-shadow: 3px 3px #ccc;
+  transform: 1s box-shadow ease-in-out;
+}
+.project-image:hover {
   box-shadow: 5px 5px #ccc;
 }
-
 .project-title {
   font-family: 'Open Sans', 'Courier New', Courier, monospace;
   font-weight: 400;
@@ -16,22 +19,25 @@
 .project-btn-live {
   background-color: transparent;
   border: 0.2px solid #1a222c;
+  padding: 0.5rem;
+  border-radius: 1rem;
   display: inline-block;
-  width: 25%;
+  width: 40%;
   cursor: pointer;
+  text-align: center;
   color: #000;
   font-size: 1rem;
-  font-family: sans-serif 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande';
-  padding: 0.3rem;
-  text-shadow: 0px 1px 0px black;
-  transition: color 0.5s ease-out, border 0.5s ease-out, background-color 0.5s ease-out;
+  font-family: 'Open Sans';
+  padding: 0.3rem !important;
+  transition: color 0.5s ease-out, border 0.5s ease-out, background-color 0.2s ease;
 }
 
 .project-btn-live:hover {
+  text-decoration: none;
+  box-shadow: 3px 3px 5px black;
   color: white;
   border: 1px solid #54516a;
-  background-color: #54516a;
-  padding: 0.3rem;
+  background-color: #3a28c2;
 }
 .project-tech {
   list-style-position: inside;
