--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,21 @@
 }
 
 ::selection {
-  background: gray;
+  background: yellow;
+  color: white;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
+@font-face {
+  font-family: 'OpenSans-Bold';
+  src: url(./shared/fonts/OpenSans-Bold.ttf);
+}
+
+@font-face {
+  font-family: 'OpenSans-Light';
+  src: url(./shared/fonts/OpenSans-Light.ttf);
+}
+
+@font-face {
+  font-family: 'Open Sans';
+  src: url(./shared/fonts/OpenSans-Regular.ttf);
+}
