--- a/src/components/Aboutme/Aboutme.css
+++ b/src/components/Aboutme/Aboutme.css
@@ -5,18 +5,6 @@
   text-align: justify;
 }
 .aboutme {
-  background-color: #b2b2b2a8;
-}
-
-.top {
-  font-size: 1.5rem;
-  border: 1px solid black;
-  border-radius: 50%;
-  margin-right: 10px;
-  color: black;
-  transition: background-color 0.3s ease-in-out;
-}
-.top:hover {
-  color: white;
-  background-color: black;
+  background-color: #f1f1f1;
+  margin-top: -10px;
 }
