--- a/src/components/HeaderContent/HeaderContent.css
+++ b/src/components/HeaderContent/HeaderContent.css
@@ -18,6 +18,7 @@
 
 .header-role {
   font-size: 2rem;
+  margin-bottom: 5px;
   text-align: center;
 }
 
@@ -33,6 +34,7 @@
 .header-contactlist {
   list-style-type: none;
   font-size: 1.5rem;
+  margin-bottom: 5px;
 }
 .header-contactlist-iconwrapper {
   display: block;
@@ -51,7 +53,7 @@
     font-size: 3rem;
   }
   .header-role {
-    font-size: 1rem;
+    font-size: 0.9rem;
     text-align: center;
   }
   .header-navlink {
