--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -1,4 +1,12 @@
-.projects {
-  background-color: #f1f1f1;
-  margin-top: -10px;
+.top {
+  font-size: 1.5rem;
+  border: 1px solid black;
+  border-radius: 50%;
+  margin-right: 10px;
+  color: black;
+  transition: background-color 0.3s ease-in-out;
+}
+.top:hover {
+  color: white;
+  background-color: black;
 }
