--- a/src/components/Aboutme/Aboutme.css
+++ b/src/components/Aboutme/Aboutme.css
@@ -1,5 +1,5 @@
 .aboutme-para {
-  font-family: 'Open Sans', 'Courier New', Courier, monospace;
+  font-family: 'OpenSans-Light', 'Courier New', Courier, monospace;
   padding: 1rem;
   font-size: 1.2rem;
   text-align: justify;
