--- a/src/components/Project/Project.css
+++ b/src/components/Project/Project.css
@@ -37,7 +37,7 @@
   box-shadow: 3px 3px 5px black;
   color: white;
   border: 1px solid #54516a;
-  background-color: #3a28c2;
+  background-color: #666668;
 }
 .project-tech {
   list-style-position: inside;
